tests/cases/lambdas/errors/err_map_lambda_arity.aipl
import { wrapping_add as +, map, print, to_str } from builtins;

// `map`'s lambda must take exactly one parameter.
fn main() !prints {
    let xs = [1, 2, 3];
    print(to_str(xs.map(|x, y| x + y)));
}
--- errors ---
error: lambda has 2 parameter(s), but (i64) -> _ was expected
 --> ./tests/cases/lambdas/errors/err_map_lambda_arity.aipl:6:25
  |
6 |     print(to_str(xs.map(|x, y| x + y)));
  |                         ^^^^^^^^^^^^
